<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarSecond"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:navigationIconTint="@color/white"
        app:title="@string/second_title"
        app:titleTextColor="@color/white" />

    <com.google.android.material.card.MaterialCardView
        style="@style/feature_intro_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/school_form_field_gap"
        android:layout_marginEnd="@dimen/screen_padding"
        android:layout_marginBottom="@dimen/school_form_field_gap">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/second_page_headline"
                android:textAppearance="@style/feature_intro_headline" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity3_form_inner_gap"
                android:text="@string/second_saved_hint"
                android:textAppearance="@style/feature_intro_lede" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOpenSchoolDb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/school_form_field_gap"
        android:layout_marginEnd="@dimen/screen_padding"
        android:text="@string/school_open_recycler"
        app:backgroundTint="@color/school_fab_bg" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCreateEventFromSaved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding"
        android:layout_marginTop="@dimen/school_form_field_gap"
        android:layout_marginEnd="@dimen/screen_padding"
        android:text="@string/button_create_event_saved_screen"
        app:backgroundTint="@color/tab_indicator" />

    <ListView
        android:id="@+id/simpleListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:divider="@color/divider"
        android:dividerHeight="1dp"
        android:paddingBottom="@dimen/recycler_bottom_padding_nav" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/view_bottom_nav" />
</LinearLayout>
